feat: add more domain entity and dtos, refactor cardholder APIs
