# public/swagger.json
@@ -7,116 +7,6 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"QRCodeType": {
-				"enum": [
-					"data_url",
-					"dynamic_link"
-				],
-				"type": "string"
-			},
-			"RegisterResponse": {
-				"properties": {
-					"qrcode": {
-						"type": "string"
-					},
-					"qrcodeType": {
-						"$ref": "#/components/schemas/QRCodeType"
-					}
-				},
-				"required": [
-					"qrcode",
-					"qrcodeType"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"RegisterRequest": {
-				"properties": {
-					"visitId": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"visitId"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"AccessResponse": {
-				"properties": {
-					"qrcode": {
-						"type": "string"
-					},
-					"qrcodeType": {
-						"$ref": "#/components/schemas/QRCodeType"
-					}
-				},
-				"required": [
-					"qrcode",
-					"qrcodeType"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"AccessRequest": {
-				"properties": {
-					"visitId": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"visitId"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"RefresAccessRequest": {
-				"properties": {
-					"visitId": {
-						"type": "string"
-					},
-					"cardholderId": {
-						"type": "string"
-					},
-					"existingCardId": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"visitId",
-					"cardholderId",
-					"existingCardId"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"DynamicQRCodeLinkResponse": {
-				"properties": {
-					"dynamicQRCodeLink": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"dynamicQRCodeLink"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"ActivationResponse": {
-				"properties": {
-					"success": {
-						"type": "boolean"
-					},
-					"reason": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"success"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"Actitity": {
 				"enum": [
 					"Checkin",
@@ -189,164 +79,6 @@
 		}
 	},
 	"paths": {
-		"/qrcode/register_qrcode": {
-			"post": {
-				"operationId": "RegisterVisit",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/RegisterResponse"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"QRCode"
-				],
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/RegisterRequest"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/qrcode/access_qrcode": {
-			"post": {
-				"operationId": "GetAccessQRCode",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/AccessResponse"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"QRCode"
-				],
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/AccessRequest"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/qrcode/refresh_access_qrcode": {
-			"post": {
-				"operationId": "RefreshAccessQRCode",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/AccessResponse"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"QRCode"
-				],
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/RefresAccessRequest"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/qrcode/{visitId}/dynamic_link": {
-			"get": {
-				"operationId": "GetDynamicQRCodeLink",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/DynamicQRCodeLinkResponse"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"QRCode"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "visitId",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
-		"/qrcode/dynamic_link/{visitId}/activate": {
-			"get": {
-				"operationId": "Activate",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/ActivationResponse"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"QRCode"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "visitId",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
 		"/events/live": {
 			"get": {
 				"operationId": "GetLiveEvents",
