# src/api/controllers/wifi.controller.ts
@@ -1,0 +1,12 @@
+import { Get, Post, Body, Path, Route, Tags } from "tsoa";
+import {  } from "../../domain/dtos/acs";
+import { QRCodeType } from "../../domain/entities/cardholder";
+
+// TODO - 1B
+@Route("wifi")
+@Tags("wifi")
+export class WIFIController {
+  //* Dependency injection
+  constructor() { }
+
+}
